nodeapp/yml/nodeapp1.dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp1-dep
  labels:
    app: nodeapp1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapp1
  template:
    metadata:
      labels:
        app: nodeapp1
    spec:
      containers:
      - name: nodeapp1
        image: pietronromano/nodeapp1:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi" #128 MB
            cpu: "200m" #200 millicpu (.2 cpu or 20% of the cpu)

---
apiVersion: v1
kind: Service
metadata:
 name: nodeapp1-np
spec:
 type: NodePort
 selector:
    app: nodeapp1
 ports:
 - port: 81
   targetPort: 8080
   nodePort: 31001
