nodeapp/yml/nodeapp1.lb.yml
---
apiVersion: v1
kind: Service
metadata:
 name: nodeapp1-lb
spec:
 type: LoadBalancer
 selector:
    app: nodeapp1
 ports:
 - port: 81
   targetPort: 8080
