nodeapp/yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: lb-app1
            port:
              number: 81
  - http:
      paths:
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: lb-app2
            port:
              number: 82
